1.9.18 ~ correct distorted bold fonts on webkit desktop

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,9 @@
 ﻿html, body								{ position: absolute; top: 0; left: 0; width: 100%; height: 100%; max-width: 100%; max-height: 100%; overflow: hidden; margin: 0; background-color: #fff; -ms-touch-action: none; touch-action: none; direction: ltr; }
 *, ::before, ::after					{ -webkit-box-sizing: border-box; -webkit-user-select: none; user-select: none; padding: 0; margin: 0; outline: 0; border: 0; border-radius: 0; -webkit-user-callout: none !important; -webkit-touch-callout: none !important; -webkit-tap-highlight-color: rgba(0,0,0,0); -webkit-focus-ring-color: rgba(0,0,0,0); -webkit-margin-before: 0; -webkit-margin-after: 0; -webkit-margin-start: 0; -webkit-margin-end: 0; }
-.osx *, .osx ::before, .osx ::after,
-.ios *, .ios ::before, .ios ::after		{ -webkit-perspective: 0 !important; font-weight: 400; }
+.osx *, .osx *::before, .osx *::after,
+.ios *, .ios *::before, .ios *::after	{ -webkit-perspective: 0 !important; font-weight: 400; }
+.desktop.webkit *::before, 
+.desktop.webkit *::after				{ font-weight: normal !important; }
 /*native scroll*/
 .overthrow								{ overflow: auto !important; -webkit-overflow-scrolling: touch; -ms-touch-action: pan-y; touch-action: pan-y; }
 .windows8 								{ overflow: hidden !important; }
@@ -1709,5 +1711,4 @@ body.appLang-fr #saveAsNew						{ font-size: 14px; }
 .ios7 #screenInfo.info_slider_quick_add #circleFocus:before,
 .ios7 #screenInfo.info_slider_quick_add #circleFocus:after	{ top: 5px !important; }
 .ios7 #screenInfo.info_slider_quick_add #textBlock			{ top: 230px; }
-
 
